src/QGraphicsSimpleTextItem.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQGraphicsSimpleTextItemCtor_1(void * parent);
EXTERNC void * SCWQGraphicsSimpleTextItemCtor_1(void * parent);
EXTERNC void * QWQGraphicsSimpleTextItemCtor_2(char * text, void * parent);
EXTERNC void * SCWQGraphicsSimpleTextItemCtor_2(char * text, void * parent);
EXTERNC void QWQGraphicsSimpleTextItemsetText(void * obj, char * text);
EXTERNC void QWQGraphicsSimpleTextItemtext(void * retBuffer, void * obj);
EXTERNC void QWQGraphicsSimpleTextItemsetFont(void * obj, void * font);
EXTERNC void * QWQGraphicsSimpleTextItemfont(void * obj);
EXTERNC void * QWQGraphicsSimpleTextItemboundingRect(void * obj);
EXTERNC void QWvalidateCB_QGraphicsSimpleTextItem(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQGraphicsSimpleTextItemDtor(void *);
EXTERNC void SCWQGraphicsSimpleTextItemDtor(void *);